# SuperNOVAS

./: CHANGELOG.md  CMakeLists.txt  Makefile  README.md  USAGE-C99.md  USAGE-CPP.md  config.mk  requirements.apt  requirements.dnf
.github/workflows/: analyze.yml  build-cmake.yml  build.yml  dox.yml  example.yml  install.yml  test.yml
cmake/: supernovasConfig.cmake.in
doc/src/: docedit.c
examples/c99/: CMakeLists.txt
examples/cpp/: CMakeLists.txt
include/: novas-mutex.h  novas.h  supernovas.h
legacy/: readeph0.c  solarsystem.h
src/: CMakeLists.txt  Makefile
src/c99/: CMakeLists.txt  Makefile  cmp.c  equator.c  frames.c  iers.c  itrf.c  nutation.c  observer.c  orbital.c  parse.c  place.c  refract.c  solsys-calceph.c  solsys-cspice.c  solsys3.c  spectral.c  system.c  target.c  timescale.c  transform.c  util.c
src/cpp/: Calendar.cpp  CatalogEntry.cpp  EOP.cpp  Ecliptic.cpp  Equatorial.cpp  Frame.cpp  Galactic.cpp  Horizontal.cpp  Makefile  Observer.cpp  Orbital.cpp  Site.cpp  Source.cpp  Temperature.cpp  Time.cpp  Vector.cpp
src/tools/: CMakeLists.txt  Makefile  iers-fetch.c
test/: Makefile
test/c99/: CMakeLists.txt  Makefile  test-dummy-curl.c  test-errors.c  test-super.c
test/c99/resources/: C01-align.txt  C01-bad.txt  C01-start.txt  EOP_C01_IAU2000_1846-now.txt  bad-entry.list  bad-expiration-after-entries.list  bad-expiration-ok1.list  bad-expiration-ok2.list  bad-expiration.list  leap-seconds.empty  truncated-leap.list
test/cpp/: CMakeLists.txt  CatalogEntryTest.cpp  EOPTest.cpp  EclipticTest.cpp  EquatorialTest.cpp  FrameTest.cpp  GalacticTest.cpp  HorizontalTest.cpp  Makefile  ObserverTest.cpp  OrbitalTest.cpp  PlanetTest.cpp  SourceTest.cpp  TemperatureTest.cpp  TestUtil.hpp
